# MuseScore

./: .appveyor.yml  .gitignore  CMakeLists.txt  SetupConfigure.cmake  build.sh  msvc_build.bat
aeolus/: addsynth.cpp  addsynth.h  aeolus.cpp  aeolus.h  aeolusgui.cpp  aeolusgui.h  asection.cpp  asection.h  audio.cpp  division.cpp  division.h  exp2ap.cpp  global.h  messages.h  model.cpp  model.h  prbsgen.h  rankwave.cpp  rankwave.h  scales.cpp  sparm.cpp  sparm.h  sparm_p.h
artifacts/: artifact_name.env
audiofile/: audiofile.cpp  audiofile.h
avsomr/: avsimport.cpp  avslog.h  avsomr.cpp  avsomr.h  avsomrdrawer.cpp  avsomrdrawer.h  avsomrlocal.cpp  avsomrlocal.h  avsomrlocalinstaller.cpp  avsomrlocalinstaller.h  avsomrlocalrecognizer.cpp  avsomrlocalrecognizer.h  avsomrnetrecognizer.cpp  avsomrnetrecognizer.h  avsomrreader.cpp  avsomrreader.h  avsomrsetup.cpp  avsomrsetup.h  iavsomrrecognizer.h  msmrfile.cpp  msmrfile.h  msmrwriter.cpp  msmrwriter.h  ret.cpp  ret.h
awl/: aslider.cpp  aslider.h  awlplugin.cpp  awlplugin.h  colorlabel.cpp  colorlabel.h  denomspinbox.cpp  denomspinbox.h  fastlog.h  knob.cpp  knob.h  ltest.cpp  midipanknob.cpp  midipanknob.h  mslider.cpp  mslider.h  panknob.cpp  panknob.h  pitchedit.cpp  pitchedit.h  pitchlabel.cpp  pitchlabel.h  posedit.cpp  posedit.h  poslabel.cpp  poslabel.h  slider.cpp  slider.h  styledslider.cpp  styledslider.h  utils.cpp  utils.h  volknob.cpp  volknob.h  volslider.cpp  volslider.h
bww2mxml/: main.cpp  (+2 more)
sandbox/jsonvsxml/: CMakeLists.txt  main.cpp  rwjson.cpp  rwjson.h  rwxml.cpp  rwxml.h  score.cpp  score.h
(+2970 files in other folders)
